--- a/style.css
+++ b/style.css
@@ -41,7 +41,15 @@ p{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     color: rgb(0, 0, 0);
-    
+}
+
+.pgrandemeio{
+    text-align: center;
+    display: block;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    font-size: 24px;
+    color: rgb(0, 0, 0);
 }
 input{
     display: block;
